--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-Django==3.1.7
-requests==2.24.0
-Pillow==8.1.2
-Django==3.1.7
-requests==2.24.0
-opencv-contrib-python==4.5.1.48
+asgiref==3.4.0
+gunicorn==20.1.0
+certifi==2021.5.30
+chardet==4.0.0
+Django==3.2.4
+idna==2.10
+numpy==1.21.0
+opencv-contrib-python==4.5.2.54
+Pillow==8.2.0
+pytz==2021.1
+requests==2.25.1
+sqlparse==0.4.1
+urllib3==1.26.6
